--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,6 +27,6 @@ jobs:
         for dir in examples/*; do
           if [ -d "$dir" ]; then
             echo "Building project in $dir"
-            platformio ci "$dir" --board ATmega328P
+            platformio ci "$dir" --board ATmega328P --lib="."
           fi
         done
