--- a/library.properties
+++ b/library.properties
@@ -4,6 +4,6 @@ author=Oshima Shosen Robotics Research Club
 maintainer=Fujimori Soshiro <i22110@oshima.kosen.ac.jp>
 sentence=大島商船高等専門学校ロボット研究部用ライブラリ
 paragraph=このライブラリは、大島商船高等専門学校ロボット研究部のプロジェクトで使用されるために設計されています。様々なプラットフォームで動作し、メモリ効率の良いコードを提供します。
-category=Robotics
+category=Other
 url=https://github.com/Oshima-Shosen-Robotics-Research-Club/liboshima.git
 architectures=*
