--- a/library.properties
+++ b/library.properties
@@ -8,4 +8,4 @@ category=Other
 url=https://github.com/Oshima-Shosen-Robotics-Research-Club/liboshima.git
 architectures=*
 includes=liboshima.h
-depends=FastLED, digitalWriteFast
+depends=FastLED, digitalWriteFast, dummy
