--- a/.github/workflows/tag_on_version_change_properties.yml
+++ b/.github/workflows/tag_on_version_change_properties.yml
@@ -15,13 +15,13 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Set up Python (to use grep and sed)
-        uses: actions/setup-python@v4
+      - name: Set up Shell
+        run: sudo apt-get install -y jq
 
       - name: Check if version has changed
         id: check_version
         run: |
-          source scripts/common.sh
+          source scripts/version_utils.sh
 
           CURRENT_VERSION=$(get_version_from_properties)
           echo "Current version: $CURRENT_VERSION"
@@ -30,7 +30,7 @@ jobs:
             echo "No changes in library.properties. Skipping tag creation."
             exit 0
           else
-            PREVIOUS_VERSION=$(git show HEAD^:library.properties | grep -E '^version=' | sed 's/version=//')
+            PREVIOUS_VERSION=$(get_version_from_properties HEAD^)
             if [ "$CURRENT_VERSION" != "$PREVIOUS_VERSION" ]; then
               echo "VERSION=$(echo $CURRENT_VERSION | tr -d '\r\n')" >> $GITHUB_ENV
             else
