--- a/.github/workflows/publish_on_version_change.yml
+++ b/.github/workflows/publish_on_version_change.yml
@@ -53,4 +53,4 @@ jobs:
           PLATFORMIO_API_TOKEN: ${{ secrets.PLATFORMIO_API_TOKEN }}
         run: |
           echo "Publishing package for version $VERSION"
-          pio pkg publish
+          pio pkg publish --non-interactive
