Refactor workflow to update PLATFORMIO_API_TOKEN to PLATFORMIO_AUTH_TOKEN in publish_on_version_change.yml

--- a/.github/workflows/publish_on_version_change.yml
+++ b/.github/workflows/publish_on_version_change.yml
@@ -50,7 +50,7 @@ jobs:
       - name: Publish package
         if: env.VERSION != ''
         env:
-          PLATFORMIO_API_TOKEN: ${{ secrets.PLATFORMIO_API_TOKEN }}
+          PLATFORMIO_AUTH_TOKEN: ${{ secrets.PLATFORMIO_AUTH_TOKEN }}
         run: |
           echo "Publishing package for version $VERSION"
           pio pkg publish --non-interactive
