build.ymlにArduinoファイルの変更を追加し、ビルドトリガーを拡張

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,10 +5,12 @@ on:
     paths:
       - '**/*.cpp'
       - '**/*.h'
+      - '**/*.ino'
   pull_request:
     paths:
       - '**/*.cpp'
       - '**/*.h'
+      - '**/*.ino'
   workflow_dispatch:
 
 jobs:
