ワークフローをstableブランチからdevelopブランチに変更

--- a/.github/workflows/publish_on_version_change.yml
+++ b/.github/workflows/publish_on_version_change.yml
@@ -3,7 +3,7 @@ name: Publish on version change (JSON)
 on:
   push:
     branches:
-      - stable
+      - develop
     paths:
       - 'library.json'
 
