Revert "ワークフローをstableブランチからdevelopブランチに変更"
This reverts commit 23017f26a52941e3b9bcc2a3d08dcf6bde176d41.

--- a/.github/workflows/publish_on_version_change.yml
+++ b/.github/workflows/publish_on_version_change.yml
@@ -3,7 +3,7 @@ name: Publish on version change (JSON)
 on:
   push:
     branches:
-      - develop
+      - stable
     paths:
       - 'library.json'
 
