--- a/.github/workflows/tag_on_version_change_properties.yml
+++ b/.github/workflows/tag_on_version_change_properties.yml
@@ -3,7 +3,7 @@ name: Tag on version change (Properties)
 on:
   push:
     branches:
-      - develop
+      - stable
     paths:
       - 'library.properties'
 
